apps/base/seedbox/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8096
      protocol: TCP
  type: ClusterIP
